<resources>
    <string name="app_name">Asha Bakers</string>
    <string name="sales">Sales</string>
    <string name="register">Register</string>
    <string name="add_sales_details">Add Sales Details</string>
    <string name="shop_name">Shop Name</string>
    <string name="visit_date">Visit Date : </string>
    <string name="item_details">Item Details</string>
    <string name="item">Item : </string>
    <string name="qty">Qty : </string>
    <string name="calculate">Calculate</string>
    <string name="total_price">Total Price</string>
    <string name="add">Add</string>
    <string name="totalprice">Total Price : </string>
    <string name="pricehead">Price Details</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="singin">Sing In</string>
    <string name="price">Price</string>
    <string name="print">Print</string>
    <string name="controlpanel">Control Panel</string>
    <string name="addnewshop">Add New Shop</string>
    <string name="addnewitem">Add New Item</string>
    <string name="addnewuser">Add New User</string>
    <string name="showreports">Show Reports</string>
    <string name="singout">Sing Out</string>
    <string name="goback">Go Back</string>
    <string name="singup">Sing Up</string>
    <string name="enternewuseremail">Enter New User Email</string>
    <string name="enternewuserpassword">Enter New User Password</string>
    <string name="text">Copyright 2018 | All Right Reserved</string>
    <string name="itemname">Item Name</string>
    <string name="currentitems">Current Items</string>
    <string name="entervisitdate">Enter Visit Date</string>
    <string name="month">Month :</string>
    <string name="salesreport">Sales Reports</string>
    <string name="shopname">Shop Name :</string>
    <string name="generate">Generate</string>
    <string name="pricetotal">Total Price</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
</resources>
