<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adelmotechnology.bakery_app.salesActivity"
    android:background="@drawable/mainbackimg">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/addSalesdetailstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/add_sales_details"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shopnametext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addSalesdetailstext"
            android:layout_margin="5dp"
            android:text="@string/shop_name"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/shopspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/addSalesdetailstext"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/shopnametext"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visitdatetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shopnametext"
            android:layout_margin="5dp"
            android:text="@string/visit_date"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/datetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shopnametext"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/visitdatetext"
            android:text="date"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/visitdatetext"
            android:layout_margin="5dp"
            android:text="@string/item"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/itemspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/visitdatetext"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/itemtext"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datetext"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/itemspinner"
            android:text="@string/qty"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/qtyno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/datetext"
            android:layout_margin="5dp"
            android:layout_toRightOf="@+id/qty"
            android:inputType="number"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15dp" />

        <Button
            android:id="@+id/itemaddbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qtyno"
            android:layout_margin="5dp"
            android:background="@drawable/button_design"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/pricetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qtyno"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:text="@string/price"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/printbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qtyno"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_design"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <ListView
            android:id="@+id/itemlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/itemaddbtn"
            android:layout_margin="5dp"
            android:divider="@color/white"
            android:dividerHeight="1dp"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:textColor="@color/white"
            android:textSize="10dp" />

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>
